# ConstraintProgramming

./: ConstraintProgramming.cabal  queen-modell
all/kw42/: queens.cabal
all/kw42/src/: Queens.hs  Ramsey.hs  SAT.hs
all/kw45/: ersatz-cardinality.cabal
all/kw45/src/: MM0916.hs  Pigeon.hs
all/kw45/src/Ersatz/: Cardinality.hs
all/kw46/: obdd.cabal
all/kw46/src/: Main.hs
src/: Main.hs  Queens.hs
